# mail

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Justfile  README.md  ideas.txt
src/: config.rs  connection.rs  lib.rs  main.rs  oauth2.rs  parser.rs  store.rs  xoauth2.rs
src/auth/: mod.rs  xoauth2.rs
src/imap/: command.rs  connection.rs  mod.rs  parser.rs  response.rs  session.rs
src/store/: fixture.rs  mod.rs  sqlite.rs
tests/: imap.rs
tests/imap/: session.rs
tests/imaptest/: basic  basic.mbox
