[package]
name = "mail"
version = "0.1.0"
authors = ["claytongentry <cg3ntry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
jsonwebtoken = "7.2.0"
serde = "1.0.123"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]