[package]
name = "mail"
version = "0.1.0"
authors = ["claytongentry <cg3ntry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
diesel = { version = "2.3.10", features = ["sqlite"] }
futures = "0.3.32"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }

[dependencies.async-std]
version = "1.13.2"
features = ["attributes"]
